--- a/add_driver.html
+++ b/add_driver.html
@@ -111,49 +111,51 @@
 
 
         function get_access_token(driver_name, driver_mobile_number) {
-            $.ajax({
-                type: "POST",
-                url: BASE_URL + ENDPOINT_GENERATE_AUTH_TOKEN,
-                data: JSON.stringify({
-                    "username": FLEETOS_USERNAME,
-                    "password": FLEETOS_PASSWORD
-                }),
-                contentType: 'application/json; charset=utf-8',
-                dataType: 'json',
-                beforeSend: function () {
-                    showLoader()
-                },
-                success: function (response) {
-                    hideLoader()
+			// Using the hard coded token for now, should ideally be done using local storage or something
+			call_add_driver(driver_name, driver_mobile_number, FLEETOS_HARDCODED_TOKEN)
+            // $.ajax({
+            //     type: "POST",
+            //     url: BASE_URL + ENDPOINT_GENERATE_AUTH_TOKEN,
+            //     data: JSON.stringify({
+            //         "username": FLEETOS_USERNAME,
+            //         "password": FLEETOS_PASSWORD
+            //     }),
+            //     contentType: 'application/json; charset=utf-8',
+            //     dataType: 'json',
+            //     beforeSend: function () {
+            //         showLoader()
+            //     },
+            //     success: function (response) {
+            //         hideLoader()
 
-                    if (response == null) {
-                        alert(ERROR_RESPONSE_NULL)
-                    } else if (response['auth_token'] == null || response['auth_token'] == "") {
-                        alert(ERROR_TOKEN_EMPTY)
-                    } else {
-                        if (response['code'] == API_SUCCESS_CODE) {
-                            let token = response['auth_token']
+            //         if (response == null) {
+            //             alert(ERROR_RESPONSE_NULL)
+            //         } else if (response['auth_token'] == null || response['auth_token'] == "") {
+            //             alert(ERROR_TOKEN_EMPTY)
+            //         } else {
+            //             if (response['code'] == API_SUCCESS_CODE) {
+            //                 let token = response['auth_token']
 
-                            call_add_driver(driver_name, driver_mobile_number, token)
-                        } else {
-                            if (response['responseJSON']['message'] != null && response['responseJSON']['message'] != "") {
-                                 alert(response['responseJSON']['message'])
-                            } else {
-                                alert(ERROR_GENERATING_AUTH_TOKEN)
-                            }
-                        }
-                    }
-                },
-                error: function (response) {
-                    hideLoader()
+            //                 call_add_driver(driver_name, driver_mobile_number, token)
+            //             } else {
+            //                 if (response['responseJSON']['message'] != null && response['responseJSON']['message'] != "") {
+            //                      alert(response['responseJSON']['message'])
+            //                 } else {
+            //                     alert(ERROR_GENERATING_AUTH_TOKEN)
+            //                 }
+            //             }
+            //         }
+            //     },
+            //     error: function (response) {
+            //         hideLoader()
 
-                    if (response['responseJSON']['message'] != null && response['responseJSON']['message'] != "") {
-                         alert(response['responseJSON']['message'])
-                    } else {
-                        alert(ERROR_GENERATING_AUTH_TOKEN)
-                    }
-                }
-            });
+            //         if (response['responseJSON']['message'] != null && response['responseJSON']['message'] != "") {
+            //              alert(response['responseJSON']['message'])
+            //         } else {
+            //             alert(ERROR_GENERATING_AUTH_TOKEN)
+            //         }
+            //     }
+            // });
         }
 
         function call_add_driver(driver_name, driver_mobile_number, token) {
