--- a/tracking_details.html
+++ b/tracking_details.html
@@ -147,49 +147,50 @@
                 }
             });
 
-            $.ajax({
-                type: "POST",
-                url: BASE_URL + ENDPOINT_GENERATE_AUTH_TOKEN,
-                data: JSON.stringify({
-                    "username": FLEETOS_USERNAME,
-                    "password": FLEETOS_PASSWORD
-                }),
-                contentType: 'application/json; charset=utf-8',
-                dataType: 'json',
-                beforeSend: function () {
-                    showLoader()
-                },
-                success: function (response) {
-                    hideLoader()
+			get_driver_details_from_fleetos(mobileNumber, FLEETOS_HARDCODED_TOKEN)
+            // $.ajax({
+            //     type: "POST",
+            //     url: BASE_URL + ENDPOINT_GENERATE_AUTH_TOKEN,
+            //     data: JSON.stringify({
+            //         "username": FLEETOS_USERNAME,
+            //         "password": FLEETOS_PASSWORD
+            //     }),
+            //     contentType: 'application/json; charset=utf-8',
+            //     dataType: 'json',
+            //     beforeSend: function () {
+            //         showLoader()
+            //     },
+            //     success: function (response) {
+            //         hideLoader()
 
-                    if (response == null) {
-                        alert(ERROR_RESPONSE_NULL)
-                    } else if (response['auth_token'] == null || response['auth_token'] == "") {
-                        alert(ERROR_TOKEN_EMPTY)
-                    } else {
-                        if (response['code'] == API_SUCCESS_CODE) {
-                            token = response['auth_token']
+            //         if (response == null) {
+            //             alert(ERROR_RESPONSE_NULL)
+            //         } else if (response['auth_token'] == null || response['auth_token'] == "") {
+            //             alert(ERROR_TOKEN_EMPTY)
+            //         } else {
+            //             if (response['code'] == API_SUCCESS_CODE) {
+            //                 token = response['auth_token']
 
-                            get_driver_details_from_fleetos(mobileNumber, token)
-                        } else {
-                            if (response['responseJSON']['message'] != null && response['responseJSON']['message'] != "") {
-                                alert(response['responseJSON']['message'])
-                            } else {
-                                alert(ERROR_GENERATING_AUTH_TOKEN)
-                            }
-                        }
-                    }
-                },
-                error: function (response) {
-                    hideLoader()
+            //                 get_driver_details_from_fleetos(mobileNumber, token)
+            //             } else {
+            //                 if (response['responseJSON']['message'] != null && response['responseJSON']['message'] != "") {
+            //                     alert(response['responseJSON']['message'])
+            //                 } else {
+            //                     alert(ERROR_GENERATING_AUTH_TOKEN)
+            //                 }
+            //             }
+            //         }
+            //     },
+            //     error: function (response) {
+            //         hideLoader()
 
-                    if (response != null && response['responseJSON']['message'] != null && response['responseJSON']['message'] != "") {
-                        alert(response['responseJSON']['message'])
-                    } else {
-                        alert(ERROR_GENERATING_AUTH_TOKEN)
-                    }
-                }
-            });
+            //         if (response != null && response['responseJSON']['message'] != null && response['responseJSON']['message'] != "") {
+            //             alert(response['responseJSON']['message'])
+            //         } else {
+            //             alert(ERROR_GENERATING_AUTH_TOKEN)
+            //         }
+            //     }
+            // });
 
             function get_driver_details_from_fleetos(driver_mobile_number, token) {
                 $.ajax({
@@ -256,53 +257,54 @@
         });
 
         function getToken(mobileNumber, startDateTimeInEpoch, endDateTimeInEpoch) {
-            $.ajax({
-                type: "POST",
-                url: BASE_URL + ENDPOINT_GENERATE_AUTH_TOKEN,
-                data: JSON.stringify({
-                    "username": FLEETOS_USERNAME,
-                    "password": FLEETOS_PASSWORD
-                }),
-                contentType: 'application/json; charset=utf-8',
-                dataType: 'json',
-                beforeSend: function () {
-                    showLoader()
-                },
-                success: function (response) {
-                    hideLoader()
+			getTrackingDetails(mobileNumber, startDateTimeInEpoch, endDateTimeInEpoch, FLEETOS_HARDCODED_TOKEN);
+            // $.ajax({
+            //     type: "POST",
+            //     url: BASE_URL + ENDPOINT_GENERATE_AUTH_TOKEN,
+            //     data: JSON.stringify({
+            //         "username": FLEETOS_USERNAME,
+            //         "password": FLEETOS_PASSWORD
+            //     }),
+            //     contentType: 'application/json; charset=utf-8',
+            //     dataType: 'json',
+            //     beforeSend: function () {
+            //         showLoader()
+            //     },
+            //     success: function (response) {
+            //         hideLoader()
 
-                    if (response == null) {
-                        alert(ERROR_RESPONSE_NULL)
-                    } else if (response['auth_token'] == null || response['auth_token'] == "") {
-                        alert(ERROR_TOKEN_EMPTY)
-                    } else {
-                        if (response['code'] == API_SUCCESS_CODE) {
-                            token = response['auth_token']
+            //         if (response == null) {
+            //             alert(ERROR_RESPONSE_NULL)
+            //         } else if (response['auth_token'] == null || response['auth_token'] == "") {
+            //             alert(ERROR_TOKEN_EMPTY)
+            //         } else {
+            //             if (response['code'] == API_SUCCESS_CODE) {
+            //                 token = response['auth_token']
 
-                            if (mobileNumber != null && mobileNumber != "" && startDateTimeInEpoch != null && endDateTimeInEpoch != null) {
-                                getTrackingDetails(mobileNumber, startDateTimeInEpoch, endDateTimeInEpoch, token);
-                            } else {
-                                stopTracking();
-                            }
-                        } else {
-                            if (response['responseJSON']['message'] != null && response['responseJSON']['message'] != "") {
-                                alert(response['responseJSON']['message'])
-                            } else {
-                                alert(ERROR_GENERATING_AUTH_TOKEN)
-                            }
-                        }
-                    }
-                },
-                error: function (response) {
-                    hideLoader()
+            //                 if (mobileNumber != null && mobileNumber != "" && startDateTimeInEpoch != null && endDateTimeInEpoch != null) {
+            //                     getTrackingDetails(mobileNumber, startDateTimeInEpoch, endDateTimeInEpoch, token);
+            //                 } else {
+            //                     stopTracking();
+            //                 }
+            //             } else {
+            //                 if (response['responseJSON']['message'] != null && response['responseJSON']['message'] != "") {
+            //                     alert(response['responseJSON']['message'])
+            //                 } else {
+            //                     alert(ERROR_GENERATING_AUTH_TOKEN)
+            //                 }
+            //             }
+            //         }
+            //     },
+            //     error: function (response) {
+            //         hideLoader()
 
-                    if (response != null && ['responseJSON']['message'] != null && response['responseJSON']['message'] != "") {
-                        alert(response['responseJSON']['message'])
-                    } else {
-                        alert(ERROR_GENERATING_AUTH_TOKEN)
-                    }
-                }
-            });
+            //         if (response != null && ['responseJSON']['message'] != null && response['responseJSON']['message'] != "") {
+            //             alert(response['responseJSON']['message'])
+            //         } else {
+            //             alert(ERROR_GENERATING_AUTH_TOKEN)
+            //         }
+            //     }
+            // });
         }
 
         function convertDateTimeStringToEpoch(dateTime) {
